<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_horizontal_margin">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="21sp"
                android:text="@string/switch_product_improvement"/>
            <Switch
                style="@style/left_button_list_button"
                android:switchTextAppearance="@style/SwitchTextAppearance"
                android:layout_width="wrap_content"
                android:textOn="@string/switch_product_improvement_on"
                android:textOff="@string/switch_product_improvement_off"
                android:id="@+id/product_improvement_switch"/>
        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>