<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/sv_button_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintWidth_percent="0.15">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/login_button_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_login"
                style="@style/main_fragment_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_login_account"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_logout"
                style="@style/main_fragment_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_logout_account"
                app:layout_constraintTop_toBottomOf="@id/btn_login" />

            <Button
                android:id="@+id/btn_get_login_info"
                style="@style/main_fragment_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_get_login_info"
                app:layout_constraintTop_toBottomOf="@id/btn_logout" />



        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


    <TextView
        android:id="@+id/tv_login_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_login_account"
        app:layout_constraintEnd_toStartOf="@id/tv_login_account_info"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_login_account_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        android:text="null"
        />

    <TextView
        android:id="@+id/tv_login_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/tv_login_state"
        app:layout_constraintEnd_toStartOf="@id/tv_login_state_info"
        app:layout_constraintTop_toBottomOf="@id/tv_login_account"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_login_state_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_login_account"
        tools:ignore="MissingConstraints"
        tools:text="Login" />

    <TextView
        android:id="@+id/tv_login_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/tv_login_error"
        app:layout_constraintEnd_toStartOf="@id/tv_login_error_info"
        app:layout_constraintTop_toBottomOf="@id/tv_login_state"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_login_error_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_login_state"
        tools:ignore="MissingConstraints"
        android:text="null" />

</androidx.constraintlayout.widget.ConstraintLayout>